tests/NormalTests/paczka1/fuzzy1/88093043.err
Error in line 4: SjYY S317 30,4
Error in line 19: GqYtUE5 A31 53,1
Error in line 29: A31 S480 202,0
Error in line 35: GqYtUE5 A314 77,8
